WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198776
[Apple Pay] ASSERTION FAILED: m_state == State::Activating under WebPaymentCoordinatorProxy::showPaymentUI
https://bugs.webkit.org/show_bug.cgi?id=198776
Summary
[Apple Pay] ASSERTION FAILED: m_state == State::Activating under WebPaymentCo...
Andy Estes
Reported
2019-06-11 18:25:29 PDT
[Apple Pay] ASSERTION FAILED: m_state == State::Activating under WebPaymentCoordinatorProxy::showPaymentUI
Attachments
Patch
(2.95 KB, patch)
2019-06-11 18:32 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2019-06-11 18:26:41 PDT
rdar://problem/49123795
Andy Estes
Comment 2
2019-06-11 18:32:14 PDT
Created
attachment 371903
[details]
Patch
WebKit Commit Bot
Comment 3
2019-06-11 20:18:32 PDT
Comment on
attachment 371903
[details]
Patch Clearing flags on attachment: 371903 Committed
r246345
: <
https://trac.webkit.org/changeset/246345
>
WebKit Commit Bot
Comment 4
2019-06-11 20:18:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug